Documentacion api para genero
